# FastAPI_JWT_example

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.tests.yml  docker-compose.yml  main.py  pyproject.toml
app/config/: description.py  settings.py
app/control/: user.py
app/database/: data.py  fake_users_db.json
app/endpoints/: auth.py  user.py
app/schemas/: user.py
tests/: conftest.py  test_app.py  variables.py
