[tool.poetry]
name = "shift"
version = "0.1.0"
description = ""
authors = ["Evgenii Romenskii <evgenyromensky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
httpx = "^0.23.3"
passlib = "^1.7.4"
pydantic = "^1.10.8"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
